@@ -12,7 +12,7 @@ script_location = alembic
 # revision_environment = false
 
 #sqlalchemy.url = sqlite:///%(here)s/stalker.db
-sqlalchemy.url = postgresql+psycopg2://stalker_admin:stalker@192.168.1.10:5432/stalker
+sqlalchemy.url = postgresql+psycopg2://stalker_admin:stalker@localhost:5432/stalker
 
 # Logging configuration
 [loggers]
